[+] Displaying key in title

--- a/app/views/tolk/locales/show.html.erb
+++ b/app/views/tolk/locales/show.html.erb
@@ -39,6 +39,7 @@
           <% @phrases.each do |phrase| %>
             <div class="panel panel-default">
               <div class="panel-heading">
+                <%= phrase.key %>:
                 <code>
                   <% if params[:q].present? -%>
                     <%= highlight(format_i18n_value(phrase.translations.primary.text), params[:q]) -%>
@@ -77,15 +78,13 @@
                       <%= text_area_tag :"translations[][original_text]",
                           format_i18n_text_area_value(phrase.translations.primary.text),
                           :disabled => true,
-                          :class => 'form-control',
-                          :title => phrase.key
+                          :class => 'form-control'
                       %>
                     <% else %>
                       <%= text_field_tag :"translations[][original_text]",
                           format_i18n_text_area_value(phrase.translations.primary.text),
                           :disabled => true,
-                          :class => 'form-control',
-                          :title => phrase.key
+                          :class => 'form-control'
                       %>
                     <% end %>
                   </div>
