--- a/app/views/tolk/locales/all.html.erb
+++ b/app/views/tolk/locales/all.html.erb
@@ -37,6 +37,7 @@
           <div class="panel panel-default">
             <div class="panel-heading">
               <% if action_name == 'updated' %>
+                <%= phrase.key %>:
                 <div class="updated">
                   <span class="key"><%= t 'tolk.show.updated' %></span>
                   <code><%= format_i18n_value(phrase.translations.primary.text) -%></code>
@@ -77,15 +78,13 @@
                     <%= text_area_tag :"translations[][original_text]",
                         format_i18n_text_area_value(phrase.translations.primary.text),
                         :disabled => true,
-                        :class => 'form-control',
-                        :title => phrase.key
+                        :class => 'form-control'
                     %>
                   <% else %>
                     <%= text_field_tag :"translations[][original_text]",
                         format_i18n_text_area_value(phrase.translations.primary.text),
                         :disabled => true,
-                        :class => 'form-control',
-                        :title => phrase.key
+                        :class => 'form-control'
                     %>
                   <% end %>
                 </div>
