--- a/app/views/tolk/searches/show.html.erb
+++ b/app/views/tolk/searches/show.html.erb
@@ -32,7 +32,7 @@
             <% if translation = phrase.translations.where(locale_id: @locale.id).first || Tolk::Translation.new(:locale => @locale, :phrase => phrase) %>
               <div class="panel panel-default">
                 <div class="panel-heading">
-                  <%= phrase.key %>:
+                  <%= phrase.key %> |
                   <code>
                     <% if params[:q].present? -%>
                       <%= highlight(format_i18n_value(phrase.translations.primary.text), params[:q]) -%>
